--- a/package.xml
+++ b/package.xml
@@ -2,12 +2,12 @@
 <package format="2">
   <name>Kalman_IMU</name>
   <version>0.0.0</version>
-  <description></description>
+  <description>The Kalman_IMU package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="pasta@todo.todo">pasta</maintainer>
+  <maintainer email="ua07@todo.todo">ua07</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-
+  <!-- <url type="website">http://wiki.ros.org/Kalman_IMU</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -50,10 +50,13 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>rosserial_arduino</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_export_depend>rospy</build_export_depend>
+  <build_export_depend>rosserial_arduino</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>rospy</exec_depend>
+  <exec_depend>rosserial_arduino</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
 
